@@ -24,3 +24,6 @@
 * Cleaned up Session; #find no longer supported, use #all or #first
 * Moved object materialization into LoadCommand
 * Migrated Sqlite3Adapter::Commands
+* Added Session#query support back in
+* Removed Connection/Reader/Result classes
+* Set DataMapper::Base#key on load to avoid double-hit against Schema
